修复科技股票池市值和估值情况的错误